--- a/index.html
+++ b/index.html
@@ -5,14 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
-        <marquee tên-thuộc-tính="giá-trị-thuộc-tính".... các-thuộc-tính-khác>
-
-            ĐIỆP ĐẦU BÒ
-       
-       </marquee>
+       <div class="row justify-content-around">
+            <form class="col-md-6 bg-light p-3 my-3">
+                <h3 class="text-center">Điệp đăng nhập em</h3>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="password">password</label>
+                    <input type="password" id="password" class="form-control">
+                </div>
+                <input type="button" value="đăng nhập" onclick="login()" class="btn btn primary btn-block">
+            </form>
+       </div>
     </div>
+    <script src="js/app.js"></script>
+    <script>
+        function login(){
+            var name=$("#name").val();
+            var pw= $("#password").val();
+            if(name==""||pw=="")
+            {
+                alert("Nhập tài khoản password");
+                return;
+            }
+            if(name=="Diep" && pw=="Diepdaubo")
+            {
+                location.href='main.html';
+            }
+        }
+    </script>
 </body>
 </html>
